--- a/RESULTADOS/M3.md
+++ b/RESULTADOS/M3.md
@@ -12,3 +12,6 @@ Implementados os metodos para carregamento das texturas
 | SETA DIREITA   | Move a câmera para a direita (produto vetorial entre frente e topo)  |
 | PAGE UP        | Move a câmera para frente (ao longo de `cameraFront`)                |
 | PAGE DOWN      | Move a câmera para trás (ao longo de `cameraFront`)                  |
+
+![image](https://github.com/user-attachments/assets/9d3d2414-32ee-46fd-84c9-cbf5e4cb57fd)
+
