--- a/RESULTADOS/M4.md
+++ b/RESULTADOS/M4.md
@@ -18,3 +18,6 @@ Implementados os componentes de iluminação com coltroles da iluminação confo
 | W              | Move a luz para cima (aumenta posição Y da luz)                      |
 | Q              | Move a luz para trás (diminui posição Z da luz)                      |
 | E              | Move a luz para frente (aumenta posição Z da luz)                    |
+
+![image](https://github.com/user-attachments/assets/b4ae4c56-a88e-47e3-a52b-2f0fd0971eec)
+
