--- a/RESULTADOS/M5.md
+++ b/RESULTADOS/M5.md
@@ -20,3 +20,5 @@ Implementação da camera, conforme comandos abaixo
 | **Z**               | Ativar/desativar rotação no eixo Z               | Rotação Objeto  |
 | **Esc**             | Fechar a janela                                   | Sistema         |
 
+![image](https://github.com/user-attachments/assets/45e7ee99-0eb4-4db7-8a4e-8215ffaee60f)
+
