--- a/RESULTADOS/M6.md
+++ b/RESULTADOS/M6.md
@@ -21,3 +21,7 @@ Lista de controles
 | **Y**               | Ativar/desativar rotação no eixo Y               | Rotação Objeto  |
 | **Z**               | Ativar/desativar rotação no eixo Z               | Rotação Objeto  |
 | **Esc**             | Fechar a janela                                   | Sistema         |
+
+
+![image](https://github.com/user-attachments/assets/fb7d97bf-48cd-45bf-9980-de9108d5475b)
+
